--- a/views/computation.pug
+++ b/views/computation.pug
@@ -1,7 +1,8 @@
 extend layout
 block content
      h1 #{title}
-     p Math.pow () is applied to #{p1} is #{p}
-     p Math.atanh () is applied to #{p2} is #{q}
-     p Math.cbrt () is applied to #{p3} is #{r}
+     p Math.pow () is applied to #{a1} is #{f}
+     p Math.sign () is applied to #{a2} is #{r}
+     p Math.tanh() is applied to #{a3} is #{t}
+     p Math.trunc () is applied to #{a4} is #{s}
      
