--- a/views/computation.pug
+++ b/views/computation.pug
@@ -1,8 +1,6 @@
 extend layout
 block content
      h1 #{title}
-     p Math.pow () is applied to #{a1} is #{f}
-     p Math.sign () is applied to #{a2} is #{r}
-     p Math.tanh() is applied to #{a3} is #{t}
-     p Math.trunc () is applied to #{a4} is #{s}
+     p Math.tanh() is applied to #{p1} is #{t}
+     p Math.trunc () is applied to #{p2} is #{s}
      
